media/css/zamboni/mobile.css
/* ... */
.grouped_ratings .stars-2 {
    background-position: 39px 50%;
}
.grouped_ratings .stars-1 {
    background-position: 52px 50%;
}
.grouped_ratings .stars-0 {
    background-position: 65px 50%;
}

.grouped_ratings li {
    height: 12px;
    margin-bottom: 8px;
    clear: both;
}


.grouped_ratings .rating_bar {
    float: left;
    height: 12px;
    margin-top: 4px;
    background: #eee;
    position: relative;
    overflow: visible;
    width: 120px;
}
.num_ratings {
    font-size: .9em;
    color: #888;
    line-height: 22px;
    width: 1px;
    position: absolute;
    right: -6px;
    top: 0px;
    line-height: 1em;
    font-size: .9em;
}
.grouped_ratings .rating_bar span.bar {
    display:block;
    height: 100%;
    background: #888;
    height: 12px;
}

/* rtl */
.html-rtl .grouped_ratings .rating_bar {
    border-left: 0;
    float: right;
}

.html-rtl .grouped_ratings .rating_bar span.bar {
    float: right;
}

.html-rtl .grouped_ratings .rating_bar span.num_ratings {
    right: auto;
    left: -4px;
}
.review .old-version {
    font-size: .8em;
    font-style: italic;
    line-height: 1em;
    color: #888;
    margin-top: 4px;
}
.review {
    margin-bottom: 1.5em;
}

/************************************/
/*              CAROUSEL            */
/************************************/

.carousel .control,
#lightbox .control {
    display: block;
    position: absolute;
    top: 0;
    opacity: .9;
    width: 45px;
    height: 95%;
    line-height: 100px;
    font-size: 48px;
    text-align: center;
    color: #447BC4;
    text-shadow: 0 0 5px #fff;
    -moz-transition: .2s color ease;
    -webkit-transition: .2s color ease;
}
.carousel .control.disabled {
    color: #ccc;
}
.carousel .control.prev,
.html-rtl .carousel .control.next {
    background-image: -moz-linear-gradient(left, #fff 20%, rgba(255,255,255,0));
    right: auto;
    left: 0;
}
.carousel .control.next,
.html-rtl .carousel .control.prev {
    background-image: -moz-linear-gradient(left, rgba(255,255,255,0), #fff 80%);
    left: auto;
    right: 0;
}

.carousel {
    position: relative;
    padding: 14px 40px;
    overflow: hidden;
/*    background-image: -moz-linear-gradient(#fff 95%, #dcedfd);*/
    background-color: #fff;
    border-bottom: 2px solid #dcedfd;
    margin-bottom: 20px;
}

.carousel ul {
    height: 78px;
    white-space: nowrap;
    position: relative;
    left: 0;
    -moz-transition-duration: .5s;
    -moz-transition-property: left, right;
    -webkit-transition-duration: .5s;
    -webkit-transition-property: left, right;
}

.carousel li {
    display: inline-block;
    width: 50%;
    text-align: center;
}

.carousel li img {
    border: 1px solid #afbed0;
    max-height: 75px;
    max-width: 100px;
    border-radius: 6px;
    -moz-box-shadow: 0 0 4px rgba(0,0,0,.2);
    -webkit-box-shadow: 0 0 4px rgba(0,0,0,.2);
}

/************************************/
/*              EXPANDO             */
/************************************/

a.expando:-moz-focusring {
    border: 0;
    outline: none;
}
a.expando {
    color: #447BC4;
}
.menu a.expando {
    position: relative;
    display: block;
    padding: 10px 20px;
    float: right;
    color: #447BC4;
}
.html-rtl .menu a.expando {
    float: left;
}
.menu a.expando:after {
    border-top-color: #447BC4;
    top: 15px;
}
.menu a.expando.expand:after {
    -moz-transform: rotate(180deg);
    -webkit-transform: rotate(180deg);
}
.expando-managed {
    overflow: hidden;
    height: 0;
    -moz-transition: .5s height ease;
    -webkit-transition: .5s height ease;
}

/************************************/
/*              FOOTER              */
/************************************/

footer:before {
    content: " ";
    display: block;
    position: absolute;
    top: -30px;
    left: 0;
    width: 100%;
    height: 30px;
    box-shadow: 0 -2px rgba(0,0,0,.1) inset;
}
footer {
    font-family: "Droid Sans", sans-serif;
    font-size: 1em;
    color: white;
    margin-top: 30px;
    padding: 14px;
    position: relative;
    min-height: 200px;
    box-shadow: 0 2px rgba(0,0,0,.1) inset;
    background: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAcAAAABCAYAAAASC7TOAAAAFElEQVQIHWO0DZ3xnwELYOXgYwAAOHwCRjqu6SgAAAAASUVORK5CYII=');
}
footer select {
    margin-top: 4px;
    display: block;
    width: 100%;
    padding-top: 4px;
    height: 30px;
}
#footer-links, #footer-links a {
    color: #5f92ce;
    text-align:center;
    font-size: 14px;
    padding: 4px;
}

footer a.desktop-link {
    background: #5f92ce;
    -webkit-border-radius: 6px;
    -moz-border-radius: 6px;
    border-radius: 6px;
    color: #fff;
    display: block;
    font-family: "Trebuchet MS", "Droid Sans", sans-serif;
    font-size: 150%;
    font-weight: bold;
    line-height: 200%;
    margin: 1em 0;
    text-align: center;
    text-transform: uppercase;
}

